tests/NormalTests/paczka1/fuzzy1/97431170.err
Error in line 7: A461 S366 81,1
Error in line 17: XUMPH S950 67,4
Error in line 9: A461 A127 92,4
Error in line 19: XUMPH S366 41,1
Error in line 14: FrmY A127 31,9
Error in line 38: yCkkGxG S366 -4,5
Error in line 35: 5n1Ql6AvVhP S950 139,0
